--- a/views/modals/speakerDetail.ejs
+++ b/views/modals/speakerDetail.ejs
@@ -1,1 +1,70 @@
-<div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"><div class="modal-dialog modal-lg modal-dialog-centered" role="document"><div class="modal-content p-4 border-primary border-2"><div class="margin-left-auto"><button class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div><div class="modal-header d-block border-0"><h1 class="modal-title text-center">Speaker Details</h1></div><div class="modal-body px-6" id="speaker-details"><p class="text-muted text-center">All the fields are optional but you can enrich your dataset contribution by providing the demographic details.</p><div class="col-12 text-center text-primary cursor-pointer" id="resetBtn">Not You? Change User</div><div class="form-group mt-5"><label for="username" class="form-label">Username</label> <input class="form-control" maxlength="12" id="username" data-toggle="tooltip" placeholder="Enter preferred username" title="Username can't be more than 12 characters"><div class="text-danger mt-2 d-none" id="username-error"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="red" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/></svg> <span class="align-middle">Please don't use email or mobile number as user name</span></div></div><div class="form-group"><label for="mother-tongue" class="form-label">Mother Tongue</label> <select class="form-control" id="mother-tongue"><option selected="selected" value="">Select Mothertongue</option> <% MOTHER_TONGUE.forEach(function(lang) { %> <option value="<%= lang %>"><%= lang %></option> <% }) %> </select></div><div class="form-group"><label for="age" class="form-label">Age Group</label> <select class="form-control" id="age"><option selected="selected" value="">Pick age range</option><option value="00 - 13">00 - 12 (Kid)</option><option value="13 - 17">13 - 17 (Youth)</option><option value="18 - 29">18 - 29 (Adult)</option><option value="30 - 39">30 - 39 (Adult)</option><option value="40 - 49">40 - 49 (Adult)</option><option value="50 - 59">50 - 59 (Adult)</option><option value="60 - 64">60 - 64 (Adult)</option><option value="65 - 74">65 - 74 (Senior)</option><option value="> 75">&gt; 75 (Senior)</option></select></div><div class="form-group"><label for="gender" class="form-label">Gender</label><div class="justify-content-between"><div class="form-check form-check-inline"><input class="form-check-input" type="radio" name="gender" id="male-check" value="male"> <label class="form-check-label p-2" for="male-check">Male</label></div><div class="form-check form-check-inline"><input class="form-check-input" type="radio" name="gender" id="female-check" value="female"> <label class="form-check-label p-2" for="female-check">Female</label></div><div class="form-check form-check-inline"><input class="form-check-input" type="radio" name="gender" id="other-check" value="others"> <label class="form-check-label p-2" for="other-check">Others</label></div></div></div><div class="form-check mt-4"><input class="form-check-input mt-0 mt-sm-1" type="checkbox" value="" id="tnc"> <label class="form-check-label ml-md-2 ml-4" for="tnc">I have read and agree to the <a href="/terms-and-conditions">Terms and Conditions</a></label></div><div class="row justify-content-center mt-5"><div class="col-12"><button type="button" id="proceed-box" class="btn btn-primary h6 shadow w-100 rounded p-3 point-none" disabled="disabled" data-toggle="modal" data-target="#languageModal">LET'S GO</button></div></div></div></div></div></div>
+<div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content p-4 border-primary border-2">
+            <div class="margin-left-auto"><button class="close float-right" data-dismiss="modal"
+                    aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+            <div class="modal-header d-block border-0">
+                <h1 class="modal-title text-center"><%= __('Speaker Details') %></h1>
+            </div>
+            <div class="modal-body px-6" id="speaker-details">
+                <p class="text-muted text-center"><%= __('All the fields are optional but you can enrich your dataset contribution by providing the demographic details.') %></p>
+                <div class="col-12 text-center text-primary cursor-pointer" id="resetBtn"><%= __('Not You? Change User') %></div>
+                <div class="form-group mt-5"><label for="username" class="form-label"><%= __('Username') %></label> <input
+                        class="form-control" maxlength="12" id="username" data-toggle="tooltip"
+                        placeholder="Enter preferred username" title="Username can't be more than 12 characters">
+                    <div class="text-danger mt-2 d-none" id="username-error"><svg xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24" fill="red" width="18px" height="18px">
+                            <path d="M0 0h24v24H0z" fill="none" />
+                            <path
+                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z" />
+                        </svg> <span class="align-middle"><%= __('Please don\'t use email or mobile number as user name') %></span>
+                    </div>
+                </div>
+                <div class="form-group"><label for="mother-tongue" class="form-label"><%= __('Mother Tongue') %></label> <select
+                        class="form-control" id="mother-tongue">
+                        <option selected="selected" value=""><%= __('Select Mothertongue') %></option>
+                        <% MOTHER_TONGUE.forEach(function(lang) { %>
+                            <option value="<%= lang %>">
+                                <%= lang %>
+                            </option>
+                            <% }) %>
+                    </select></div>
+                <div class="form-group"><label for="age" class="form-label"><%= __('Age Group') %></label> <select
+                        class="form-control" id="age">
+                        <option selected="selected" value=""><%= __('Pick age range') %></option>
+                        <option value="00 - 13">00 - 12 (Kid)</option>
+                        <option value="13 - 17">13 - 17 (Youth)</option>
+                        <option value="18 - 29">18 - 29 (Adult)</option>
+                        <option value="30 - 39">30 - 39 (Adult)</option>
+                        <option value="40 - 49">40 - 49 (Adult)</option>
+                        <option value="50 - 59">50 - 59 (Adult)</option>
+                        <option value="60 - 64">60 - 64 (Adult)</option>
+                        <option value="65 - 74">65 - 74 (Senior)</option>
+                        <option value="> 75">&gt; 75 (Senior)</option>
+                    </select></div>
+                <div class="form-group"><label for="gender" class="form-label"><%= __('Gender') %></label>
+                    <div class="justify-content-between">
+                        <div class="form-check form-check-inline"><input class="form-check-input" type="radio"
+                                name="gender" id="male-check" value="male"> <label class="form-check-label p-2"
+                                for="male-check"><%= __('Male') %></label></div>
+                        <div class="form-check form-check-inline"><input class="form-check-input" type="radio"
+                                name="gender" id="female-check" value="female"> <label class="form-check-label p-2"
+                                for="female-check"><%= __('Female') %></label></div>
+                        <div class="form-check form-check-inline"><input class="form-check-input" type="radio"
+                                name="gender" id="other-check" value="others"> <label class="form-check-label p-2"
+                                for="other-check"><%= __('Others') %></label></div>
+                    </div>
+                </div>
+                <div class="form-check mt-4"><input class="form-check-input mt-0 mt-sm-1" type="checkbox" value=""
+                        id="tnc"> <label class="form-check-label ml-md-2 ml-4" for="tnc"><%= __('I have read and agree to the') %> <a
+                            href="/terms-and-conditions"><%= __('Terms and Conditions') %></a></label></div>
+                <div class="row justify-content-center mt-5">
+                    <div class="col-12"><button type="button" id="proceed-box"
+                            class="btn btn-primary h6 shadow w-100 rounded p-3 point-none" disabled="disabled"
+                            data-toggle="modal" data-target="#languageModal"><%= __('LET\'S GO') %></button></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
