--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -8,10 +8,9 @@ html {
     font-size: 16px;
 }
 
-@media (min-width: 1400px) {
-    html {
-      font-size: 16px;
-    }
+.container {
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .supreme-container .btn-outline-primary {
@@ -27,6 +26,16 @@ html {
     border-color: #959595;
     background-size: 1rem;
     font-weight: normal;
+}
+
+.supreme-container .btn-outline-primary:hover {
+    color: #fff;
+    background-color: #007bff;
+    background-image: url("data:image/svg+xml;utf8,<svg fill='white' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M16.003 18.626l7.081-7.081L25 13.46l-8.997 8.998-9.003-9 1.917-1.916z'/></svg>");
+}
+
+.supreme-container .btn-outline-primary:focus option {
+    color: #444444;
 }
 
 .spinner {
@@ -46,30 +55,19 @@ html {
     }
 }
 
-.supreme-container .btn-outline-primary:hover {
-    color: #fff;
-    background-color: #007bff;
-    background-image: url("data:image/svg+xml;utf8,<svg fill='white' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M16.003 18.626l7.081-7.081L25 13.46l-8.997 8.998-9.003-9 1.917-1.916z'/></svg>");
-}
-
-.supreme-container .btn-outline-primary:focus option {
-    color: #444444;
+#timeline-loader {
+    height: 30rem;
 }
 
 .contribution-details {
-    padding: 0;
-}
-
-.contribution-details > .row {
+    padding: 1rem 0;
     background-color: #F8F9FA;
-}
-
-.contribution-data {
-    border-right: 1px dashed #C4C4C4;
+    margin: 0;
+    border-radius: 8px;
 }
 
 .contribution-data:last-child {
-    border-right: none;
+    border: none;
 }
 
 .contribution-data > p:first-child {
@@ -78,21 +76,34 @@ html {
     line-height: 1.8rem;
 }
 
+#contributed-value {
+    color: #FCC232;
+}
+
+#validated-value {
+    color: #83E661;
+}
+
 .chart-row .chart,
 .chart-row .chart-spinner {
-    height: 35rem;
+    min-height: 35rem;
 }
 
 .chart-container {
-    margin: 2rem 1.6rem;
+    margin: 2rem 0;
+}
+
+.chart-row:last-child .chart-container {
+    padding-bottom: 2rem;
+    margin-top: 0;
+    margin-bottom: 2rem;
 }
 
 .chart {
     background-color: #F8F9FA;
-    flex: 0 0 48%;
-    max-width: 48%;
-    margin-right: 2.2rem;
     border-radius: 8px;
+    padding: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .chart:last-child {
@@ -103,3 +114,212 @@ html {
     font-size: 1.4rem;
     font-weight: 700;
 }
+
+.duration {
+    list-style-type: none;
+    position: relative;
+    cursor: pointer;
+}
+
+.duration li {
+    display: inline-block;
+    font-size: 12px;
+    padding: 5px 25px;
+    margin-top: 5px;
+    position: relative;
+    z-index: 0;
+}
+
+.duration li.inactive {
+    background-color: #C0D9F3;
+    color: #007BFF;
+}
+
+.duration li.tab-left {
+    border-radius: 15px 0 0 15px;
+}
+
+.duration li.tab-right {
+    border-radius: 0 15px 15px 0;
+}
+
+.duration li.active {
+    position: relative;
+    background-color: #007BFF;
+    color: #fff;
+    z-index: 1;
+    border-radius: 15px;
+}
+
+.duration li.active.tab-left {
+    box-shadow: 5px 0 5px -2px #888;
+    left: 12px;
+}
+
+.duration li.active.tab-right {
+    box-shadow: -2px 0 5px 0px #888;
+}
+
+.duration li.inactive.tab-left {
+    padding-right: 1.5rem;
+    left: 12px;
+}
+
+.duration li.inactive.tab-right {
+    padding-left: 1.5rem;
+}
+
+#legendDiv > div {
+    height: 20px;
+    width: 100%;
+    margin-top: 25px;
+}
+
+.quarter {
+    background-color: #CDD8F6;
+  }
+  
+  .half {
+    background-color: #92A8E8;
+  }
+  
+  .threeQuarter {
+    background-color: #6B85CE;
+  }
+  
+  .full {
+    background-color: #4061BF;
+  }
+
+.legend-val {
+    margin-top: 25px;
+    text-align: center;
+    font-size: 14px;
+  }
+
+.no-data-found {
+    position: fixed;
+    z-index: 10;
+    width: 75%;
+    bottom: 0;
+    padding: 1.5rem 0;
+}
+
+.no-data-found > div {
+    padding: 0.5rem 2rem;
+    background-color: #343A40;
+    color: #fff;
+    border-radius: 8px;
+    box-shadow: 5px 7px 5px -2px #888;
+}
+
+.no-data-found-text {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.contribute-now {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border: 1px solid #fff;
+    border-radius: 8px;
+    outline: none;
+    cursor: pointer;
+}
+
+.contribute-now a {
+    color: #fff;
+    text-decoration: none;
+}
+
+@media screen and (min-width: 280px) {
+    .no-data-found {
+        left: 11%;
+    }
+} 
+
+@media screen and (min-width: 320px) {
+    .no-data-found {
+        left: 9%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .contribution-data {
+        border-right: 1px dashed #C4C4C4;
+    }
+    .no-data-found {
+        left: 14%;
+    }
+}
+
+@media (min-width: 992px) {
+    .chart {
+        flex: 0 0 48%;
+        max-width: 48%;
+        margin-right: 2rem;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .chart-title {
+        padding-right: 0;
+    }
+    .duration {
+        padding-left: 0;
+    }
+    .no-data-found {
+        width: 100%;
+        left: 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    .chart {
+        margin-right: 2.5rem;
+    }
+    .no-data-found {
+        width: 90%;
+        left: 5%;
+    }
+}
+
+@media (min-width: 1400px) {
+    html {
+      font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .contribution-details {
+        padding: 0 3rem;
+    }
+    .contribution-data.col-md-3 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .contribution-data {
+        border-bottom: 1px dashed #C4C4C4;
+        padding: 1rem 0;
+    }
+    .chart {
+        padding: 1rem 1rem 4rem;
+        margin-bottom: 2rem;
+    }
+    .chart-title,
+    #duration {
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
+    .no-data-found {
+        width: 90%;
+    }
+    .no-data-found > div {
+        padding: .5rem .5rem;
+    }
+}
+
