--- a/views/record.ejs
+++ b/views/record.ejs
@@ -22,7 +22,7 @@
                 <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div>
             </div>
             <div class="row mt-5">
-                <div class="col-7 col-sm-8 offset-2">
+                <div class="col-7 col-sm-8 offset-2 offset-lg-3 col-lg-6 col-xl-4 offset-xl-4">
                     <div class="progress mt-1">
                         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width:.5%"></div>
                     </div>
@@ -42,7 +42,7 @@
                             <div class="icon-microphone"><i class="material-icons md-48">mic</i></div>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-8 text-center">
+                    <div class="col-lg-7 col-8 text-center">
                         <canvas id="visualizer"></canvas>
                     </div>
                 </div>
@@ -58,19 +58,19 @@
                 </div>
             </div>
             <div class="row justify-content-center align-items-center" id="startRecordRow">
-                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+                <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
+                    <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('SKIP') %> </button>
+                </div>
+                <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
                     <button type="button" class="btn btn-primary shadow h6 w-100 rounded p-3" id="startRecord"> <%= __('START RECORDING') %> </button>
                     <button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 rounded p-3"> <%= __('STOP RECORDING') %> </button>
                 </div>
-                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('SKIP') %> </button>
-                </div>
             </div>
             <div class="row justify-content-center align-items-center">
-                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+                <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
                     <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded p-3"> <%= __('RE-RECORD') %> </button>
                 </div>
-                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
+                <div class="col-xl-3 col-md-3 col-sm-4 col-6 col-lg-3">
                     <div class="outline-0" tabindex="0" data-toggle="tooltip" title="Please validate any error message before proceeding">
                         <button id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded p-3 point-none"> <%= __('NEXT') %> </button>
                     </div>
