--- a/views/modals/speakerDetail.ejs
+++ b/views/modals/speakerDetail.ejs
@@ -10,7 +10,7 @@
                 <div class="col-12 text-center text-primary cursor-pointer" id="resetBtn">
                     <%= __('Not You? Change User') %> </div>
                 <div class="form-group mt-5"><label for="username" class="form-label"> <%= __('Username') %> </label>
-                    <input class="form-control" maxlength="12" id="username" data-toggle="tooltip" placeholder="<% __('Enter preferred username') %>" title="<% __('Username cannot be more than 12 characters') %>">
+                    <input class="form-control" maxlength="12" id="username" data-toggle="tooltip" placeholder="<%= __('Enter preferred username') %>" title="<% __('Username cannot be more than 12 characters') %>">
                     <div class="text-danger mt-2 d-none" id="username-error"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="red" width="18px" height="18px">
                             <path d="M0 0h24v24H0z" fill="none"/>
                             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
