--- a/assets/css/record.css
+++ b/assets/css/record.css
@@ -403,3 +403,71 @@ audio {
   border-left: 0 solid transparent;
   border-right: 1.275em solid transparent;
 }
+
+.test-mic-speakers-container {
+  padding: 1rem 2rem 1rem;
+  display: flex;
+  justify-content: flex-end;
+}
+.test-mic-speaker {
+  padding: 0 3rem;
+  min-width: fit-content;
+}
+.test-mic-speaker button {
+  border: 1px solid #959595;
+  color: #959595;
+}
+.test-mic-speaker svg {
+  margin-right: 5px;
+  margin-bottom: 2px;
+}
+.test-mic-speakers-details {
+  background-color: #F8F9FA;
+  padding: 1rem;
+}
+.test-mic-speakers-details p {
+  color: #959595;
+  font-size: 0.85rem;
+  margin-bottom: 0;
+}
+.test-btn {
+  font-size: 14px;
+  width: 100%;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border: 1px solid #959595;
+  border-radius: 4px;
+}
+.test-btn svg {
+  margin-right: 8px;
+}
+.test-mic-close {
+  display: flex;
+  float: right;
+  background: none;
+  border: none;
+}
+.test-mic-close::after {
+  clear: both;
+}
+.test-canvas {
+  border: 1px solid #959595;
+  border-radius: 4px;
+  height: 15px;
+}
+
+@media (max-width: 767px) {
+  .test-mic-speaker {
+    padding: 0;
+  }
+  .test-mic-speakers-container {
+    justify-content: center;
+    padding: 1rem 0;
+  }
+  .test-mic-heading {
+    display: none;
+  }
+}
