--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../css/instructions-modal.css">
     <link rel="stylesheet" type="text/css" href="../css/validator-prompt.css">
     <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <link rel="stylesheet" type="text/css" href="../css/mic-speaker-testing.css">
 </head>
 
 <body>
@@ -22,18 +23,11 @@
         <div id="validator-page-content">
             <div class="container-fluid">
                 <div id="content-wrapper" class="d-flex flex-column">
-                    <div class="row justify-content-end pt-lg-3 pt-sm-2">
-                        <div class="report-btn-container">
-                            <button class="btn" id="report_btn" type="button">
-                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M9 11V5H11V11H9Z" fill="#959595"/>
-                                    <path d="M10 14C10.5523 14 11 13.5523 11 13C11 12.4477 10.5523 12 10 12C9.44771 12 9 12.4477 9 13C9 13.5523 9.44771 14 10 14Z" fill="#959595"/>
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M1.73576 19.6474L6.67338 17.0042C7.71408 17.3253 8.83372 17.5 10 17.5C15.5228 17.5 20 13.5825 20 8.75C20 3.91751 15.5228 0 10 0C4.47715 0 0 3.91751 0 8.75C0 10.8465 0.842648 12.7708 2.24776 14.2777L1.73576 19.6474ZM3.28595 13.9248L2.97914 13.5957C1.72877 12.2548 1 10.5683 1 8.75C1 4.59105 4.89983 1 10 1C15.1002 1 19 4.59105 19 8.75C19 12.909 15.1002 16.5 10 16.5C8.93371 16.5 7.91345 16.3403 6.96822 16.0486L6.5694 15.9256L2.9083 17.8854L3.28595 13.9248Z" fill="#959595"/>
-                                </svg>
-                                <%= __('Report') %>
-                            </button>
-                        </div>
+                    <div class="d-flex justify-content-end pt-3 record-btn-container">
+                        <%- include components/report-btn.ejs %>
+                        <%- include components/mic-speaker-test-btn.ejs %>
                     </div>
+                    <%- include modals/mic-speaker-testing.ejs %>
                     <div class="row justify-content-center" id="instructions-row">
                         <div id="instructions-link" class="d-flex justify-content-end align-items-center d-none"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#007BFF" style="cursor:pointer" class="bi bi-info-circle-fill d-none" viewBox="0 0 16 16">
                                 <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
@@ -142,6 +136,7 @@
                         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
                         <script src="../js/validator-prompt-page.js"></script>
+                        <script src="../js/mic-speaker-testing.js"></script>
             </div>
         </div>
 </body>
