--- a/crowdsource-ui/src/views/common/footer.ejs
+++ b/crowdsource-ui/src/views/common/footer.ejs
@@ -26,24 +26,33 @@
                     </a>
                 </div>
             </div>
-            <div class="row mx-0 mb-3">
-                    <div class="col-12 mt-1 text-center">
-                        <%= __('Share it with your friends and family') %>
-                    </div>
-                    <div class="col-12 text-center">
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://boloindia.nplt.in/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
-                            <img src="../../img/fb-icon.svg" width="24px" alt="Share on Facebook">
-                        </a><span>&sdot;</span>
-                        <a id="linkedin_share" href="https://www.linkedin.com/shareArticle?mini=true&url=https://boloindia.nplt.in/&title=Bolo India: A crowdsourcing initiative for Indian languages.&summary=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?/&source=" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
-                            <img src="../../img/linkedin-icon.svg" width="24px" alt="Share on LinkedIn">
-                        </a><span>&sdot;</span>
-                        <a id="twitter_share" href="https://twitter.com/intent/tweet?text=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?" target="_blank" rel="noopener noreferrer">
-                            <img src="../../img/twitter-icon.svg" width="24px" alt="Share on Twitter">
-                        </a><span>&sdot;</span>
-                        <a id="whatsapp_share" href="https://api.whatsapp.com/send?text=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?" target="_blank" rel="noopener noreferrer">
-                            <img src="../../img/whatsapp.svg" width="32px" alt="Share on Whatsapp">
-                        </a>
-                    </div>
+            <div class="row mx-0 mb-3" id="social-links">
+                <script>
+                    $(document).ready(function () {
+                        const url = window.location.href;
+                        if (url.includes('uat-nplt.vakyansh.in')) {
+                            const links = $('#social-links')
+                            links.addClass('d-none');
+                        }
+                    })
+                </script>
+                <div class="col-12 mt-1 text-center">
+                    <%= __('Share it with your friends and family') %>
+                </div>
+                <div class="col-12 text-center">
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://boloindia.nplt.in/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+                        <img src="../../img/fb-icon.svg" width="24px" alt="Share on Facebook">
+                    </a><span>&sdot;</span>
+                    <a id="linkedin_share" href="https://www.linkedin.com/shareArticle?mini=true&url=https://boloindia.nplt.in/&title=Bolo India: A crowdsourcing initiative for Indian languages.&summary=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?/&source=" target="_blank" rel="noopener noreferrer" class="text-decoration-none">
+                        <img src="../../img/linkedin-icon.svg" width="24px" alt="Share on LinkedIn">
+                    </a><span>&sdot;</span>
+                    <a id="twitter_share" href="https://twitter.com/intent/tweet?text=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?" target="_blank" rel="noopener noreferrer">
+                        <img src="../../img/twitter-icon.svg" width="24px" alt="Share on Twitter">
+                    </a><span>&sdot;</span>
+                    <a id="whatsapp_share" href="https://api.whatsapp.com/send?text=I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?" target="_blank" rel="noopener noreferrer">
+                        <img src="../../img/whatsapp.svg" width="32px" alt="Share on Whatsapp">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
